--- a/styles/vision.css
+++ b/styles/vision.css
@@ -1,6 +1,6 @@
 .main-container {
   justify-content: center;
-  space-between: 36px;
+
 }
 
 a {
@@ -21,15 +21,42 @@ a {
   position: absolute;
   right: 32px;
 }
-footer {
-  justify-content: center;
 
+.box-1 {
+  background-color: #FFFBF6;
+  padding-top: 36px;
+  padding-bottom: 36px;
+}
+
+.box-2 {
+  background-color: #F0F0F0;
+  padding-top: 36px;
+  padding-bottom: 36px;
+}
+
+.box-3 {
+  background-color: #F0F0F0;
+  padding-top: 36px;
+  padding-bottom: 36px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 36px;
+  padding-bottom: 36px;
+}
+
+footer {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
   background-color: #FFFEFC;
-  margin-left: 16px;
-  margin-right: 16px;
+
 }
 
 header {
@@ -81,6 +108,9 @@ h6 {
 p {
   font-family: proxima nova;
   font-size: 1.33em;
+  padding-bottom: 36px;
+  padding-right: 16px;
+  padding-left: 16px;
 }
 
 .project-name {
