--- a/styles/vision.css
+++ b/styles/vision.css
@@ -10,6 +10,7 @@ a {
   display: block;
   font-family: proxima nova;
   font-size: 1.33em;
+  margin-bottom: 36px;
   margin-left: auto;
   margin-right: auto;
   padding: .5em;
@@ -52,6 +53,14 @@ footer {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.footer-icons {
+  display: flex;
+  justify-content: center;
+  padding-right: 5px;
+  width: 100%;
+
 }
 
 body {
@@ -117,4 +126,8 @@ p {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.social-media {
+  padding:10px;
 }
