--- a/styles/vision.css
+++ b/styles/vision.css
@@ -1,7 +1,13 @@
+:root {
+  --primary-color: rgba(13, 11, 139, 0.75);
+  --overlay-color: rgba(24, 39, 51, 0.85);
+  --menu-speed: 0.75s;
+}
 
-.main-container {
-  justify-content: center;
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 a {
