--- a/styles/about.css
+++ b/styles/about.css
@@ -59,6 +59,10 @@ h6 {
   margin: 20px;
 }
 
+.nav-bar {
+  position: fixed;
+}
+
 p {
   font-family: proxima nova;
   font-size: 1.33em;
@@ -68,5 +72,5 @@ p {
 }
 
 ul {
-  text-decoration: none;
+  list-style: none;
 }
