--- a/styles/main.css
+++ b/styles/main.css
@@ -56,6 +56,7 @@ h2 {
   font-size: 2.33em;
   text-align: left;
   padding-bottom: 16px;
+  padding-top: 70px;
 }
 
 h3 {
@@ -106,6 +107,18 @@ h6 {
   margin: 16px;
 }
 
+.my-logo {
+  width: 80px;
+  height: 80px;
+}
+
+nav {
+  position: fixed;
+  background-color: #FFFEFC;
+  width: 100%;
+  top: 0;
+}
+
 p {
   font-family: proxima nova;
   font-size: 1.33em;
@@ -115,4 +128,5 @@ p {
 
 ul {
   padding-bottom: 16px;
+  list-style: none;
 }
