--- a/styles/vision.css
+++ b/styles/vision.css
@@ -185,6 +185,18 @@ h6 {
   width: 90%;
 }
 
+.my-logo {
+  width: 80px;
+  height: 80px;
+}
+
+nav {
+  position: fixed;
+  background-color: #FFFEFC;
+  width: 100%;
+  top: 0;
+}
+
 p {
   font-family: proxima nova;
   font-size: 1.33em;
@@ -202,6 +214,7 @@ p {
   margin-right: auto;
   width: 80vw;
   padding-bottom: 36px;
+  padding-top: 100px;
 }
 
 .social-media {
