--- a/styles/about.css
+++ b/styles/about.css
@@ -1,3 +1,4 @@
+/* hamburger nav */
 :root {
   --primary-color: rgba(255, 254, 252, 0.75);
   --overlay-color: rgba(24, 39, 51, 0.85);
@@ -14,6 +15,7 @@
   text-align: center;
 }
 
+/* social media links */
 footer {
   display: block;
   margin-left: auto;
@@ -27,12 +29,13 @@ footer {
   width: 100%;
 }
 
+/* headers */
 h4 {
   color: #9B3030;
   font-family: freight-display-pro, serif;
+  font-size: 1.5em;
   font-style: normal;
   font-weight: 700;
-  font-size: 1.5em;
   text-align: center;
 }
 
@@ -49,34 +52,38 @@ h6 {
   margin: 20px;
 }
 
+/* navigation bar */
 .my-logo {
-  width: 80px;
   height: 80px;
+  width: 80px;
 }
 
 nav {
-  position: fixed;
   background-color: #FFFEFC;
-  width: 100%;
+  position: fixed;
   top: 0;
+  width: 100%;
 }
 
+/* paragraph text */
 p {
   font-family: proxima nova;
   font-size: 1.33em;
-  padding-bottom: 36px;
   letter-spacing: 1%;
   line-height: 2.2em;
+  padding-bottom: 36px;
 }
 
+/* Image */
 .salvador {
-  width: 80vw;
-  padding-bottom: 36px;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 36px;
+  width: 80vw;
 }
 
+/* social media icon padding */
 .social-media {
   padding:10px;
   width: 80px;
