--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,3 +1,4 @@
+/* hamburger nav */
 :root {
   --primary-color: rgba(255, 254, 252, 0.75);
   --overlay-color: rgba(24, 39, 51, 0.85);
@@ -10,35 +11,36 @@
   padding: 0;
 }
 
+/* button style */
 button {
   background-color: #393939;
+  border: none;
+  border-radius: 10px;
   color: white;
+  cursor: pointer;
+  display: block;
   font-family: proxima nova;
   font-weight: normal;
   font-size: 18px;
-  border: none;
-  border-radius: 10px;
-  display: block;
-  position: relative;
+  margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
-  margin-bottom: 30px;
-  padding: 15px 30px;
-  text-align: center;
   max-width: 200px;
-  cursor: pointer;
+  padding: 15px 30px;
+  position: relative;
+  text-align: center;
 }
 
+/* Contact form */
 .contact-form {
   background-image: url(../images/background.png);
-  margin: 0 auto;
-  padding: 50px 30px 10px 30px;
-  max-width: 600px;
   border-radius: 4px;
   font-size: 16px;
   line-height: 2em;
-
+  margin: 0 auto;
+  max-width: 600px;
+  padding: 50px 30px 10px 30px;
 }
 
 .contact-info {
@@ -49,6 +51,7 @@ form {
   display: block;
 }
 
+/* social media links */
 footer {
   display: block;
   margin-left: auto;
@@ -63,12 +66,13 @@ footer {
   width: 100%;
 }
 
+/* headers */
 h1 {
   color: #9B3030;
   font-family: freight-display-pro, serif;
   font-style: normal;
-  font-weight: 700;
   font-size: 2.33em;
+  font-weight: 700;
   text-align: left;
   padding-bottom: 16px;
   padding-top:70px;
@@ -77,69 +81,74 @@ h1 {
 h4 {
   color: #9B3030;
   font-family: freight-display-pro, serif;
+  font-size: 1.5em;
   font-style: normal;
   font-weight: 700;
-  font-size: 1.5em;
   text-align: center;
 }
 
 h6 {
   color: #431313;
   font-family: freight-display-pro, serif;
+  font-size: 1em;
   font-style: normal;
   font-weight: 400;
-  font-size: 1em;
   text-align: center;
 }
 
+/* text field */
 input {
-  width: 300px;
   height: 30px;
+  width: 300px;
  }
 
 li {
   list-style: none;
 }
 
+/* navigation bar */
 .my-logo {
-  width: 80px;
   height: 80px;
+  width: 80px;
 }
 
 nav {
-  position: fixed;
   background-color: #FFFEFC;
-  width: 100%;
+  position: fixed;
   top: 0;
+  width: 100%;
 }
 
+/* contact form text styling */
 .name, .email, .message {
+  color: #393939;
   font-family: proxima nova;
   font-weight: normal;
-  color: #393939;
 }
 
 p {
   font-family: proxima nova;
   font-size: 1.33em;
   padding-bottom: 36px;
-  padding-right: 16px;
   padding-left: 16px;
+  padding-right: 16px;
 }
 
+/* social media icon padding */
 .social-media {
   padding:10px;
-  width: 80px;
   height: 80px;
+  width: 80px;
 }
 
+/* message field */
 textarea {
-  width: 300px;
-  height: 30px;
   border-color: inherit;
+  height: 30px;
+  width: 300px;
  }
 
 ul {
-  padding-bottom: 36px;
   align-items: center;
+  padding-bottom: 36px;
 }
