--- a/styles/style.css
+++ b/styles/style.css
@@ -161,6 +161,13 @@ a {
   text-decoration: none;
 }
 
+.border {
+  border-bottom: 4px solid;
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* button style */
 button, .button {
   background-color: #393939;
