--- a/styles/style.css
+++ b/styles/style.css
@@ -204,6 +204,9 @@ button, .button {
 body {
   background-color: #FFFEFC;
 }
+.box-1 {
+  width: 100%;
+}
 
 /* Research and Discovery, Branding and Idenity backgrounds */
 .box-2, .box-3 {
@@ -571,6 +574,15 @@ ul p {
   .box-1 p {
     width: 30vw;
   }
+
+  .logo-text-button {
+    width: 50%;
+  }
+
+  .proto-image {
+    width: 50%;
+  }
+  
   #desktop-proto {
    float: right;
     width: 50vw;
