--- a/styles/style.css
+++ b/styles/style.css
@@ -563,13 +563,13 @@ ul p {
 @media screen and (min-width: 991px) {
   .box-1 {
     background-color: #FFFBF6;
-
   }
+
   .project-name {
     display: flex;
     margin-left: 0px;
     padding-top: 0px;
-    padding-bottom: 36px;
+
     width: 30vw;
   }
   .box-1 p {
@@ -585,11 +585,17 @@ ul p {
     width: 50%;
     display: inline-block;
     padding-top: 200px;
-    padding-left: 50px;
+
   }
 
+  .proto-image .center {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+
   #desktop-proto {
-    width: 45vw;
+    width: 50vw;
   }
 
   .proto-button {
@@ -606,4 +612,28 @@ ul p {
     text-decoration: none;
     width: 300px;
   }
+}
+
+/* ROLES, DELIVERABLES, TOOLS */
+@media screen and (min-width: 991px) {
+  .accomplished {
+    width: 100%;
+  }
+
+  .roles {
+    display: inline-block;
+    width: 30%;
+  }
+
+  .deliverables {
+    display: inline-block;
+    width: 30%;
+  }
+
+  .tools {
+    display: inline-block;
+    width: 30%;
+  }
+
+
 }
